--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">SceneLink</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="app_name">现连</string>
+    <string name="title_link">连接</string>
+    <string name="title_find">发现</string>
+    <string name="title_resource">资源</string>
+    <string name="title_my">我的</string>
 </resources>
