--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="title_find">发现</string>
     <string name="title_resource">资源</string>
     <string name="title_my">我的</string>
+    <string name="tooltip_scan">扫一扫</string>
+    <string name="tooltip_search">搜一搜</string>
+
+
 </resources>
