--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="title_my">我的</string>
     <string name="tooltip_scan">扫一扫</string>
     <string name="tooltip_search">搜一搜</string>
-
+    <string name="tooltip_add_scene">创建场景</string>
 
 </resources>
